--- a/client/src/app/core/containers/containers.component.html
+++ b/client/src/app/core/containers/containers.component.html
@@ -10,7 +10,7 @@
     -->
     <div style="margin:16px 0;"></div>
     <div style="background:#fff; padding: 24px; min-height: 280px;">
-      Content
+      <router-outlet></router-outlet>
     </div>
   </nz-content>
   <nz-footer style="text-align: center;"
