--- a/client/src/app/core/containers/containers.component.html
+++ b/client/src/app/core/containers/containers.component.html
@@ -1,6 +1,6 @@
 <nz-layout class="layout">
   <app-header></app-header>
-  <nz-content style="padding:0 50px;">
+  <nz-content style="padding:0 50px;overflow: auto;">
     <!--
       <nz-breadcrumb style="margin:16px 0;">
         <nz-breadcrumb-item>Home</nz-breadcrumb-item>
@@ -9,11 +9,14 @@
       </nz-breadcrumb>
     -->
     <div style="margin:16px 0;"></div>
-    <div style="background:#fff; padding: 24px; min-height: 280px;">
+    <div style="background:#fff; padding: 24px; min-height: 280px;    ">
       <router-outlet></router-outlet>
     </div>
   </nz-content>
-  <nz-footer style="text-align: center;"
-    >Ant Design ©2017 Implement By Angular</nz-footer
-  >
+  <!-- TODO: 暂时disable footer -->
+  <!--
+    <nz-footer style="text-align: center;"
+      >Ant Design ©2017 Implement By Angular</nz-footer
+    >
+  -->
 </nz-layout>
