--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,6 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 /* You can add global styles to this file, and also import other style files */
-@import "./assets/styles/core.scss";
+@import './assets/styles/core.scss';
 
 // 暂时放一些可以toggle的的class
 
@@ -13,7 +13,7 @@
   height: 100% !important;
 }
 
-.cycle{
+.cycle {
   display: block;
   height: 20px;
   width: 20px;
@@ -24,6 +24,15 @@
   background: #a69595;
   border: 1px solid #a69595;
   color: white;
+}
 
+.panel-setting-group {
+  width: 100%;
+  text-align: right;
+}
 
+.ant-collapse-header {
+  font-size: 1.2rem;
+  margin-left: 1rem;
+  font-family: serif;
 }
