--- a/client/src/app/daigou/components/daigou/daigou.component.html
+++ b/client/src/app/daigou/components/daigou/daigou.component.html
@@ -15,13 +15,91 @@
     <p>{{ contactItem.phone }}</p>
     <div class="panel-setting-group">
       <nz-button-group>
-        <button nz-button nzType="primary">
+        <button nz-button nzType="default">
           <i nz-icon type="copy" theme="outline"></i>复制
         </button>
-        <button nz-button nzType="default">
+        <button nz-button nzType="dashed">
           <i nz-icon type="edit" theme="outline"></i>修改
+        </button>
+        <button nz-button nzType="primary" (click)="showModal(contactItem)">
+          <i nz-icon type="shop" theme="outline"></i>购买
         </button>
       </nz-button-group>
     </div>
   </nz-collapse-panel>
 </nz-collapse>
+
+<nz-modal
+  [(nzVisible)]="toggleModal"
+  nzTitle="添加购买"
+  nzWidth="550"
+  (nzOnCancel)="handleCancel()"
+  (nzOnOk)="handleOk()"
+>
+  <!-- [nzOkLoading]="isOkLoading" -->
+  <!---->
+  <form
+    nz-form
+    [nzLayout]="'inline'"
+    [formGroup]="buyForm"
+    (ngSubmit)="buySubmit()"
+  >
+    <nz-form-item>
+      <nz-form-control>
+        <nz-input-group>
+          <!--
+            <input formControlName="itemname" nz-input placeholder="种类" />
+          -->
+          <nz-cascader
+            [nzOptions]="options"
+            formControlName="itemname"
+            (ngModelChange)="onChanges($event)"
+            [nzPlaceHolder]="'请选择要买的物品'"
+          >
+          </nz-cascader>
+        </nz-input-group>
+        <nz-form-explain
+          *ngIf="
+            buyForm.get('itemname').dirty && buyForm.get('itemname').errors
+          "
+          >Please input your username!</nz-form-explain
+        >
+      </nz-form-control>
+    </nz-form-item>
+    <nz-form-item>
+      <nz-form-control>
+        <nz-input-group [nzPrefix]="prefixLock">
+          <input
+            formControlName="number"
+            nz-input
+            type="text"
+            placeholder="购买数量"
+          />
+        </nz-input-group>
+        <nz-form-explain
+          *ngIf="buyForm.get('number').dirty && buyForm.get('number').errors"
+          >请输入要购买的数量!</nz-form-explain
+        >
+      </nz-form-control>
+    </nz-form-item>
+  </form>
+  <nz-card style="width: 377px;;" *ngIf="buyerInfo">
+    <tbody>
+      <tr>
+        <td class="td-description "><b> Buyer:</b></td>
+        <td class="td-content ">{{ buyerInfo.name }}</td>
+      </tr>
+      <tr>
+        <td class="td-description "><b> Phone: </b></td>
+        <td class="td-content ">{{ buyerInfo.phone }}</td>
+      </tr>
+      <tr>
+        <td class="td-description "><b> 地址:</b></td>
+        <td class="td-content ">{{ buyerInfo.address }}</td>
+      </tr>
+    </tbody>
+  </nz-card>
+  <ng-template #prefixLock
+    ><i nz-icon type="calculator" theme="outline"></i
+  ></ng-template>
+</nz-modal>
