--- a/client/src/app/daigou/components/tracking/tracking.component.html
+++ b/client/src/app/daigou/components/tracking/tracking.component.html
@@ -20,7 +20,9 @@
       <td style="word-break: keep-all;">{{ data.buyer }}</td>
       <td style="word-break: keep-all;">{{ data.itemname }}</td>
       <td style="word-break: keep-all;">{{ data.number }}</td>
-      <td>{{ data.progress }}</td>
+      <td>
+        {{ data.progress }}
+      </td>
     </tr>
   </tbody>
 </nz-table>
