部署 +  Docker + Localtunnel + Expose to the network

--- a/client/src/app/core/components/header/header.component.css
+++ b/client/src/app/core/components/header/header.component.css
@@ -1,8 +1,10 @@
-:host /deep/ .ant-menu-item {
+:host /deep/ .ant-menu-item,
+:host /deep/ .ant-menu-submenu {
   user-select: none;
 }
 
-:host /deep/ .ant-menu-item:focus {
+:host /deep/ .ant-menu-item:focus,
+:host /deep/ .ant-menu-submenu:focus {
   border: none;
   outline: none;
 }
