--- a/client/src/app/daigou/components/tobuy/tobuy.component.html
+++ b/client/src/app/daigou/components/tobuy/tobuy.component.html
@@ -2,16 +2,25 @@
 
 <nz-table
   #trackingTable
-  [nzData]="dTobuyTable"
+  [nzData]="displayData"
   *ngIf="!loading"
-  [nzScroll]="{ y: '540px' }"
+  [nzShowPagination]="true"
+  [nzHideOnSinglePage]="true"
+  [nzPageSize]="'10'"
 >
   <thead>
     <tr>
       <th style="word-break: keep-all;" nzWidth="80px">buyer</th>
       <th style="word-break: keep-all;" nzWidth="250px">名称</th>
       <th style="word-break: keep-all">数量</th>
-      <th>操作</th>
+      <th
+        nzShowFilter
+        [nzFilterMultiple]="false"
+        [nzFilters]="buyerlist"
+        (nzFilterChange)="filter( $event)"
+      >
+        操作
+      </th>
     </tr>
   </thead>
   <tbody>
@@ -46,8 +55,8 @@
       nzAllowClear
       nzPlaceHolder="选择快递公司 "
     >
-      <nz-option nzValue="jack" nzLabel="Jack"></nz-option>
-      <nz-option nzValue="lucy" nzLabel="Lucy"></nz-option>
+      <nz-option nzValue="Auexpress" nzLabel="Auexpress"></nz-option>
+      <nz-option nzValue="重庆中环" nzLabel="重庆中环"></nz-option>
     </nz-select>
     <nz-input-group [nzAddOnAfter]="addOnAfterIconTemplate">
       <input
