电话号码的载入还是有点问题

--- a/client/src/app/core/components/header/header.component.html
+++ b/client/src/app/core/components/header/header.component.html
@@ -7,7 +7,7 @@
     style="line-height: 64px;"
     *ngIf="(store.select('auth') | async) as storeOBJ"
   >
-    <ng-container *ngIf="storeOBJ.status">
+    <ng-container *ngIf="storeOBJ.status && storeOBJ.user">
       <ng-container *ngFor="let nav of storeOBJ.user.active">
         <li
           [routerLink]="'/core/' + nav"
