电话号码的验证添加完毕

--- a/client/src/app/daigou/components/add-contact/add-contact.component.html
+++ b/client/src/app/daigou/components/add-contact/add-contact.component.html
@@ -47,10 +47,10 @@
         <span
           *ngIf="contactForm.get('phone').errors.required; else: otherErrorMsg"
         >
-          Please input your phone number!</span
+          请输入电话号码!</span
         >
         <ng-template #otherErrorMsg>
-          Error: {{ contactForm.get('phone').errors.validCountryPhone }}
+          {{ contactForm.get('phone').errors.validCountryPhone }}
         </ng-template>
       </nz-form-explain>
     </nz-form-control>
