--- a/client/src/app/daigou/components/daigou/daigou.component.scss
+++ b/client/src/app/daigou/components/daigou/daigou.component.scss
@@ -1,3 +1,7 @@
+:host /deep/ .ant-collapse-header {
+  user-select: none;
+}
+
 p {
   font-size: 0.8rem;
 }
@@ -15,4 +19,20 @@ p {
 .td-content {
   padding-left: 1rem;
   position: relative;
+}
+
+.title {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+
+  i {
+    font-size: 1rem;
+    margin-right: 1rem;
+  }
+}
+
+input[type='file'] {
+  display: none;
 }
