--- a/client/src/app/daigou/components/tracking/tracking.component.html
+++ b/client/src/app/daigou/components/tracking/tracking.component.html
@@ -3,26 +3,23 @@
   #trackingTable
   [nzData]="daigouTable"
   *ngIf="!loading"
-  [nzScroll]="{ y: '540px' }"
 >
   <thead>
     <tr>
-      <th style="word-break: keep-all;" nzWidth="150px">单号</th>
-      <th style="word-break: keep-all;" nzWidth="80px">buyer</th>
-      <th style="word-break: keep-all;" nzWidth="150px">名称</th>
-      <th style="word-break: keep-all">数量</th>
+      <th>单号</th>
+      <th>buyer</th>
+      <th>名称</th>
+      <th>数量</th>
       <th>物流</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let data of trackingTable.data">
-      <td style="word-break: keep-all;">{{ data.tracknumber }}</td>
-      <td style="word-break: keep-all;">{{ data.buyer }}</td>
-      <td style="word-break: keep-all;">{{ data.itemname }}</td>
-      <td style="word-break: keep-all;">{{ data.number }}</td>
-      <td>
-        {{ data.progress }}
-      </td>
+      <td>{{ data.tracknumber }}</td>
+      <td>{{ data.buyer }}</td>
+      <td>{{ data.itemname }}</td>
+      <td>{{ data.number }}</td>
+      <td>{{ data.progress }}</td>
     </tr>
   </tbody>
 </nz-table>
